testsuite/gsksl/errors/preprocessor-directive-not-an-identifier.glsl

#123

void
main ()
{
  int x = 1;
}
